--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -3,10 +3,20 @@
     cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
       auto;
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     height: 100%;
-    /* justify-content: center; */
+    width: 100%;
+    justify-content: center;
   }
+
+.container2 {
+    background: lightblue;
+    cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
+      auto;
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
   .deck {
     position: absolute;
     width: 600px;
