--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,44 +1,117 @@
 .container {
     background: lightblue;
+    background-image: url("https://images.alphacoders.com/134/thumb-1920-1345265.png");
     cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
       auto;
     display: flex;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    justify-content: center;
+    flex-direction: row;
+    /* align-items: center; */
+    height: 100vh;
+    width: 100vw;
+    /* justify-content: center; */
+    padding: 10px;
   }
 
 .container2 {
-    background: lightblue;
+    /* background: lightblue; */
+    
     cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
       auto;
     display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 25%;
+    border: 2px solid red;
+    padding: 10px;
+}
+
+.container3 {
+    cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
+    auto;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 75%;
+    border: 2px solid red;
+    padding: 10px;
+    position: relative;
+}
+
+.container3a {
+    cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
+    auto;
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+    width: 100%;
+    border: 2px solid red;
+    padding: 10px;
+    align-items: center; /* Center children horizontally */
+    justify-content: center; /* Center children vertically */
+    position: relative;
+}
+
+.container3b {
+    cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
+    auto;
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+    width: 100%;
+    border: 2px solid red;
+    padding: 10px;
+    align-items: center; /* Center children horizontally */
+    justify-content: center; /* Center children vertically */
+    position: relative;
+}
+
+.container4 {
+    cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
+    auto;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 100%;
+    padding: 10px;
+    align-items: center; /* Center children horizontally */
+    justify-content: center; /* Center children vertically */
+    position: absolute;
 }
+
   .deck {
     position: absolute;
-    width: 600px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     will-change: transform;
     display: flex;
     align-items: center;
     justify-content: center;
     touch-action: none;
+    /* border: 2px solid green; */
   }
   
   .deck > div {
-    background-color: white;
-    background-size: auto 85%;
+    /* background-color: white; */
+    background-size: auto 100%;
     background-repeat: no-repeat;
     background-position: center center;
-    width: 45vh;
-    max-width: 300px;
-    height: 85vh;
-    max-height: 570px;
+    width: 100%;
+    height: 100%;
     will-change: transform;
     border-radius: 10px;
     /* box-shadow: 0 12.5px 100px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3); */
   }
   
+  .flashingborder {
+    border: 5px solid green; /* Initial border color */
+    animation: flash 0.7s infinite alternate; /* Animation */
+  }
+  
+  @keyframes flash {
+    0% {
+      border-color: green; /* Start with green */
+    }
+    100% {
+      border-color: transparent; /* Flash to transparent */
+    }
+  }
