--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,6 +1,6 @@
 .container {
     background: lightblue;
-    background-image: url("https://images.alphacoders.com/134/thumb-1920-1345265.png");
+    /* background-image: "surveil.mp4"; */
     background-repeat: no-repeat;
     background-position: center center;
     cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39,
@@ -22,10 +22,11 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 25%;
+    width: 35%;
     border: 2px solid red;
     padding: 10px;
     align-items: center;
+    justify-content: center;
 }
 
 .container3 {
@@ -34,7 +35,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 75%;
+    width: 65%;
     border: 2px solid red;
     padding: 10px;
     position: relative;
